src/ui/app/static/css/overrides.css
/* ... */
table.dataTable input.dt-select-checkbox:indeterminate:after {
  top: 4px;
  left: 4px;
}

table.dataTable input.dt-select-checkbox:checked:after {
  margin-top: -5px;
}

:not(.btn-group):not(.input-group)
  > .btn-group.dt-buttons
  > .btn:not([class*="btn-outline-"]):first-child.disabled {
  border-left-color: var(--bs-btn-disabled-border-color) !important;
}

.dtsp-searchPanes
  :not(.btn-group):not(.input-group)
  > .btn-group
  > .btn:not([class*="btn-outline-"]):last-of-type {
  border-left-color: rgb(206, 212, 218) !important;
  border-right-color: rgb(206, 212, 218) !important;
}

.dtsp-nameCont,
.dtsp-name {
  display: flex !important;
  align-items: center !important;
}

div.dtsp-panesContainer
  div.dtsp-searchPane
  div.dt-container
  div.dtsp-nameCont
  span.badge {
  margin-top: 0;
}

.dt-scroll-body {
  height: 150px !important;
  max-height: 150px !important;
}

#plugins-dropdown-menu .input-group-text,
#plugins-dropdown-menu .form-control,
#services-dropdown-menu .input-group-text,
#services-dropdown-menu .form-control,
#templates-dropdown-menu .input-group-text,
#templates-dropdown-menu .form-control {
  border-radius: 0;
}

#plugins-dropdown-menu .input-group:focus-within,
#services-dropdown-menu .input-group:focus-within,
#templates-dropdown-menu .input-group:focus-within {
  box-shadow: none;
}

@media (min-width: 992px) {
  .w-lg-70 {
    width: 70% !important;
  }
}

/* Align and style the modal content */
.modal-dialog {
  max-width: 600px; /* Restrict modal width */
}

@media (max-width: 768px) {
  .modal-dialog {
    max-width: 90%; /* Adjust modal width on smaller screens */
  }
}

#floating-settings-button {
  bottom: 2.1rem !important;
  right: 1.5rem !important;
  z-index: 1080;
}

.bg-light-subtle {
  overflow-x: hidden;
}

.bg-dark-subtle {
  overflow-x: hidden;
}

/* Service field transition effects */
.service-field {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  margin: 0;
  padding: 0;
  transition: all 0.3s ease-in-out;
}

.service-field.show {
  max-height: 120px; /* Adjust based on content size */
  opacity: 1;
  margin-bottom: 1rem;
  padding-top: 0.5rem;
}

/* Make modal transitions smoother */
.modal.fade .modal-dialog {
  transition: transform 0.2s ease-out;
}

.modal-content {
  transition: all 0.2s ease;
}

/*
* Dark mode overrides
******************************************************************************/

.dark-style body {
  color: #fff;
  background-color: #0d2f45;
  color-scheme: dark;
}

.dark-style,
[data-bs-theme="dark"] {
  --bs-primary: #fff;
  --bs-primary-rgb: 255, 255, 255;
  --bs-primary-text-emphasis: #fff;
  --bs-link-color: #fff;
  --bs-link-color-rgb: 255, 255, 255;
  --bs-breadcrumb-divider-color: #fff;
  --bs-body-color-rgb: 255, 255, 255;
  --dt-row-selected: 31, 31, 31;
  --bs-breadcrumb-item-active-color: #fff;
}

.dark-style .list-group {
  --bs-list-group-color: #fff;
}

.dark-style .btn {
  --bs-btn-color: #fff;
}

.dark-style .btn:hover {
  --bs-btn-hover-color: #fff;
}

.dark-style .card {
  --bs-card-title-color: #fff;
}

.dark-style .dropdown-menu {
  --bs-dropdown-bg: #0c283a;
}

.dark-style .offcanvas,
.dark-style .offcanvas-xxl,
.dark-style .offcanvas-xl,
.dark-style .offcanvas-lg,
.dark-style .offcanvas-md,
.dark-style .offcanvas-sm {
  --bs-offcanvas-bg: #0d2f45;
}

.dark-style .nav-link,
.dark-style .breadcrumb-item.active,
.dark-style .card .card-header,
.dark-style .card .card-body,
.dark-style .form-label,
.dark-style .form-control,
.dark-style .form-select,
.dark-style .input-group-text {
  color: #fff !important;
}

.dark-style .breadcrumb-item,
.dark-style .breadcrumb-item a {
  color: #9caeb7;
}

.dark-style .breadcrumb-item:hover,
.dark-style .breadcrumb-item:focus,
.dark-style .breadcrumb-item a:hover,
.dark-style .breadcrumb-item a:focus {
  color: #fff;
}

.dark-style .nav-pills .nav-link.active,
.dark-style .nav-pills .nav-link.active:hover,
.dark-style .nav-pills .nav-link.active:focus {
  background-color: #0a4b69;
}

.dark-style .breadcrumb-item + .breadcrumb-item::before {
  color: #9caeb7;
}

.dark-style .btn-primary:hover {
  color: #07354a !important;
}

.dark-style .btn-light {
  background-color: #fff;
  border-color: #fff;
  box-shadow: none;
  color: #000;
}

.dark-style .card {
  background-color: #0c283a;
  border-color: #0c283a;
  color: #fff;
}

.dark-style .modal {
  --bs-modal-color: #fff;
  --bs-modal-bg: #0c283a;
}

.dark-style .input-group:focus-within .form-control,
.dark-style .input-group:focus-within .input-group-text {
  border-color: #fff !important;
}

.dark-style .text-body {
  color: #fff !important;
}

.dark-style .bg-footer-theme .footer-link {
  color: #cdd7db;
}

.dark-style h6,
.dark-style .h6,
.dark-style h5,
.dark-style .h5,
.dark-style h4,
.dark-style .h4,
.dark-style h3,
.dark-style .h3,
.dark-style h2,
.dark-style .h2,
.dark-style h1,
.dark-style .h1 {
  color: #fff;
}

.dark-style .img-fluid.qr-code,
.dark-style .x-logo {
  filter: brightness(0) invert(1);
}

.dark-style .text-primary {
  color: var(--bs-primary) !important;
}

.dark-style .text-primary.shine {
  color: rgba(var(--bs-primary-rgb), 0.1) !important;
  background-color: var(--bs-primary) !important;
}

.dark-style .text-muted {
  color: #9caeb7 !important;
}

.dark-style .sticky-card {
  background-color: rgba(12, 40, 58, 0.95) !important;
}

.dark-style .layout-navbar,
.dark-style .layout-menu {
  background-color: #0c283a !important;
  color: #fff !important;
}

.dark-style .bg-menu-theme .menu-link,
.dark-style .bg-menu-theme .menu-horizontal-prev,
.dark-style .bg-menu-theme .menu-horizontal-next {
  color: #fff;
}

.dark-style .bg-menu-theme .menu-inner > .menu-item.active > .menu-link {
  color: #07354a !important;
  background-color: #fff !important;
}

.dark-style .bg-menu-theme .menu-inner > .menu-item.active:before {
  background-color: #fff !important;
}

.dark-style .btn-outline-primary {
  color: var(--bs-primary);
  border-color: var(--bs-primary);
}
/* ... */

